objects/vlocity_ins__CampaignContentDocument__c.object
<CustomObject>
    <description>Associates Salesforce CRM content to a given sales campaign. For example, an entry might associate a telecommunications industry analyst report with a salesperson&apos;s call list.</description>
    <fields>
        <fullName>vlocity_ins__CampaignId__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Campaign_Content</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContentDocumentId__c</fullName>
        <label>Content Document</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContentTitle__c</fullName>
        <label>Content Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContentURL__c</fullName>
        <label>Content URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContentVersionId__c</fullName>
        <label>Content Version</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate if the content document is the primary content for the campaign.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Content Document</label>
    <nameField>
        <label>Campaign Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Content Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>